Add Gandi V5 facade

--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -24,12 +24,12 @@
     <% @emails.each do |email| %>
       <tr>
         <td>
-          <%= email['source'] %><span class="text-muted"><wbr>@<%= @email_domain %></span>
-          <span class="d-inline d-sm-none"><%= email['destinations'].join(', ') %></span>
+          <%= email.source %><span class="text-muted"><wbr>@<%= @email_domain %></span>
+          <span class="d-inline d-sm-none"><%= email.destinations_string %></span>
         </td>
-        <td class="d-none d-sm-table-cell"><%= email['destinations'].join(', ') %></td>
+        <td class="d-none d-sm-table-cell"><%= email.destinations_string %></td>
         <td>
-          <%= link_to icon_button('Delete', :x, height: 16), email_path(email['source']),
+          <%= link_to icon_button('Delete', :x, height: 16), email_path(email.source),
             class: 'btn btn-danger btn-sm',
             method: :delete, data: { confirm: 'Are you sure?' } %>
         </td>
@@ -37,6 +37,8 @@
     <% end %>
   </tbody>
 </table>
+
+<p>Listed <b><%= @emails.size %></b> emails.</p>
 
 <p><a href="?all=1">List all emails</a></p>
 
