Fix 404 errors on user signin page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
     <%= favicon_link_tag asset_pack_path('media/images/apple-touch-icon-precomposed.png'), :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
     <%= favicon_link_tag asset_pack_path('media/images/favicon.ico'), :rel => 'shortcut icon' %>
 
-    <link rel="stylesheet"  media="all" href="bootstrap-combobox.css">
+    <link rel="stylesheet"  media="all" href="/bootstrap-combobox.css">
     <%= javascript_pack_tag 'application' %>
     <%= stylesheet_pack_tag 'application', media: 'all' %>
-    <script src="bootstrap-combobox.js"></script>
+    <script src="/bootstrap-combobox.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-light bg-light navbar-expand-md" role="navigation">
