--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div class="col-5 col-md-2">
-      <button type="submit" class="btn btn-primary">
+      <button type="submit" class="btn btn-primary btn-inline">
         <%= icon(:check) %> Create
       </button>
     </div>
