--- a/app/views/shared/_bookmarklet.html.erb
+++ b/app/views/shared/_bookmarklet.html.erb
@@ -1,8 +1,10 @@
 <div class="row">
   <div class="col-5 col-sm-4 col-lg-12 d-lg-flex justify-content-center">
-    <a href="<%= bookmarklet %>" class="btn btn-info">Spicyham bookmarklet</a>
+    <a href="<%= bookmarklet %>" class="btn btn-info">
+      <%= icon(:bookmark) %>
+      Spicyham bookmarklet</a>
   </div>
   <div class="col-7 col-sm-8 col-lg-12">
-    <p class="pl-2 pl-lg-0">Drag button to bookmark field or right click and add to bookmarks/favorites.</p>
+    <p class="pl-2 pl-lg-0"><small>Drag button to bookmark field or right click and add to bookmarks/favorites.</small></p>
   </div>
 </div>
