--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -30,7 +30,7 @@
         <td class="d-none d-sm-table-cell"><%= email.destinations_string %></td>
         <td>
           <%= link_to icon_button('Delete', :x, height: 16), email_path(email.source),
-            class: 'btn btn-danger btn-sm',
+            class: 'btn btn-danger btn-sm btn-white',
             method: :delete, data: { confirm: 'Are you sure?' } %>
         </td>
       </tr>
