--- a/app/views/zone/_record.html.erb
+++ b/app/views/zone/_record.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="form-group">
     <div class="actions">
-      <button type="submit" class="btn btn-success">
+      <button type="submit" class="btn btn-success btn-white">
         <%= icon(:check) %> Add record
       </button>
     </div>
