--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,16 +24,20 @@
     </div>
   </div>
 
-  <!--
+  <div class="form-group row">
+    <%= f.label "API", class: "col-sm-3 col-form-label" %><br />
+    <div class="col-sm-9">
+      <%= f.select :api, User.apis, selected: resource.api_name, class: "form-control" %>
+    </div>
+  </div>
+
   <div class="form-group row">
     <%= f.label "API User", class: "col-sm-3 col-form-label" %><br />
     <div class="col-sm-9">
       <%= f.text_field :api_user, class: "form-control" %>
     </div>
   </div>
-  -->
 
-  <input type="hidden" id="user_api" name="user[api]" value="gandiv5">
   <div class="form-group row">
     <%= f.label "API Key", class: "col-sm-3 col-form-label" %><br />
     <div class="col-sm-9">
