--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -20,6 +20,7 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to icon("sign-in") + " Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class: "btn btn-success btn-white" %><br />
+    <%= link_to icon("sign-in") + " Sign in with #{OmniAuth::Utils.camelize(provider)}",
+      omniauth_authorize_path(resource_name, provider), class: "btn btn-success" %><br />
   <% end %>
 <% end %>
