--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -29,9 +29,9 @@
         </td>
         <td class="d-none d-sm-table-cell"><%= email.destinations_string %></td>
         <td>
-          <%= link_to icon_button('Delete', :x, height: 16), email_path(email.source),
-            class: 'btn btn-danger btn-sm btn-white',
-            method: :delete, data: { confirm: 'Are you sure?' } %>
+          <%= link_to icon_button("Delete", :x, height: 16), email_path(email.source),
+            class: "btn btn-danger btn-sm",
+            method: :delete, data: { confirm: "Are you sure?" } %>
         </td>
       </tr>
     <% end %>
