--- a/app/views/shared/_bookmarklet.html.erb
+++ b/app/views/shared/_bookmarklet.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-5 col-sm-4 col-lg-12 d-lg-flex justify-content-center">
-    <a href="<%= bookmarklet %>" class="btn btn-info btn-white">
+    <a href="<%= bookmarklet %>" class="btn btn-info">
       <%= icon(:bookmark) %>
       Spicyham bookmarklet</a>
   </div>
