--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Edit profile</h2>
 
 <%= form_for(resource, as: resource_name, url: user_registration_path(resource), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
