--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -1,11 +1,15 @@
 <h1>Email forwards</h1>
 
-<div class="col-12 email_create">
-  <%= render 'form' %>
+<div class="row">
+  <div class="col-12 email_create">
+    <%= render 'form' %>
+  </div>
 </div>
 
-<div class="col-12 d-block d-lg-none">
+<div class="row">
+  <div class="col-12 d-block d-lg-none">
   <%= render partial: "shared/bookmarklet" %>
+  </div>
 </div>
 
 <table class="table table-striped table-hover">
