--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -25,7 +25,7 @@
       </button>
       <% if @created_email %>
         <%= button_tag type: "button", class: "btn btn-outline-info btn-black copy-clipboard", data: { "clipboard-text" => @created_email } do %>
-          <%= icon(:clippy) %>
+          <%= icon(:paperclip) %>
           Copy
         <% end %>
       <% end %>
